Add gallery section for community events
Added a gallery section showcasing community events with images and overlays.

--- a/index.html
+++ b/index.html
@@ -206,7 +206,36 @@
             </div>
         </div>
 
-
+        <!-- Gallery Section -->
+        <div class="interactive-section" id="gallery">
+            <h2 class="section-title">Our Community in Action</h2>
+            <div class="gallery">
+                <div class="gallery-item" data-src="assets/gallery-2.jpg">
+                    <img src="assets/gallery-2.jpg" alt="Robotics Workshop">
+                    <div class="gallery-overlay">Robotics Workshop</div>
+                </div>
+                <div class="gallery-item" data-src="assets/gallery-1.jpg">
+                    <img src="assets/gallery-1.jpg" alt="Hackathon Event">
+                    <div class="gallery-overlay">Hackathon Event</div>
+                </div>
+                <div class="gallery-item" data-src="assets/mentorship.jpg">
+                    <img src="assets/mentorship.jpg" alt="Mentorship Session">
+                    <div class="gallery-overlay">Mentorship Session</div>
+                </div>
+                <div class="gallery-item" data-src="assets/DOCTORS Graduates.jpg">
+                    <img src="assets/DOCTORS Gradautes.jpg" alt="Graduation Ceremony">
+                    <div class="gallery-overlay">Graduation Ceremony</div>
+                </div>
+                <div class="gallery-item" data-src="assets/gallery-3.jpg">
+                    <img src="assets/gallery-3.jpg" alt="Tech Conference">
+                    <div class="gallery-overlay">Tech Conference</div>
+                </div>
+                <div class="gallery-item" data-src="assets/Community meetup">
+                    <img src="assets/Community meetup.webp" alt="Community Meetup">
+                    <div class="gallery-overlay">Community Meetup</div>
+                </div>
+            </div>
+        </div>
     <p>&copy;2025 TECH-SISTERS.All rights reserved</p>
 </footer>
     <script>
