Add real-time updates section to index.html
Added a new interactive section for real-time updates with member announcements and event notifications.

--- a/index.html
+++ b/index.html
@@ -236,6 +236,19 @@
                 </div>
             </div>
         </div>
+        
+         <!-- Real-time Updates -->
+        <div class="interactive-section">
+            <h2 class="section-title">Latest Updates</h2>
+            <div class="real-time-updates" id="realTimeUpdates">
+                <div class="update-item">Welcome to our newest member: Sarah Johnson from New York! 🎉</div>
+                <div class="update-item">Robotics Workshop this Saturday at 2 PM - Register now! 🤖</div>
+                <div class="update-item">Congratulations to Maria Chen for landing her dream job at Google! 🚀</div>
+            </div>
+        </div>
+    </div>
+
+    
     <p>&copy;2025 TECH-SISTERS.All rights reserved</p>
 </footer>
     <script>
