Add lightbox modal to index.html
Added a lightbox modal for displaying gallery images.

--- a/index.html
+++ b/index.html
@@ -248,7 +248,13 @@
         </div>
     </div>
 
-    
+     <!-- Lightbox Modal -->
+    <div class="lightbox" id="lightbox">
+        <div class="lightbox-content">
+            <span class="lightbox-close" id="closeLightbox">&times;</span>
+            <img src="" alt="Gallery Image" class="lightbox-img" id="lightboxImg">
+        </div>
+    </div>
     <p>&copy;2025 TECH-SISTERS.All rights reserved</p>
 </footer>
     <script>
