Implement contact modal with form
Added a contact modal with a form for user inquiries.

--- a/index.html
+++ b/index.html
@@ -255,6 +255,20 @@
             <img src="" alt="Gallery Image" class="lightbox-img" id="lightboxImg">
         </div>
     </div>
+
+    <!-- Contact Modal -->
+    <div class="modal" id="contactModal">
+        <div class="modal-content">
+            <button class="modal-close" id="closeModal">&times;</button>
+            <h2>Contact TECH-SISTERS</h2>
+            <form class="modal-form" id="contactForm">
+                <input type="text" placeholder="Your Name" required>
+                <input type="email" placeholder="Your Email" required>
+                <textarea placeholder="Your Message" rows="4" required></textarea>
+                <button type="submit">Send Message</button>
+            </form>
+        </div>
+    </div>
     <p>&copy;2025 TECH-SISTERS.All rights reserved</p>
 </footer>
     <script>
