--- a/index.html
+++ b/index.html
@@ -269,8 +269,17 @@
             </form>
         </div>
     </div>
-    <p>&copy;2025 TECH-SISTERS.All rights reserved</p>
-</footer>
+
+    <footer id="contact">
+        <div class="socials">
+            <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
+            <a href="https://linkedin.com" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+        </div>
+        <p>&copy;2025 TECH-SISTERS. All rights reserved</p>
+    </footer>
+    
     <script>
         // Wait for DOM to be fully loaded
 document.addEventListener('DOMContentLoaded', function() {
