Implement close action for robot message on outside click
Replaced the menu close functionality with a close action for the robot message when clicking outside of it.

--- a/index.html
+++ b/index.html
@@ -309,15 +309,12 @@
 
         robotAssistant.addEventListener('click', toggleRobotMessage);
 
-
-    // Close menu when clicking outside
-    document.addEventListener('click', function(e) {
-        if (!hamburger.contains(e.target) && !navLinks.contains(e.target)) {
-            hamburger.classList.remove('active');
-            navLinks.classList.remove('active');
-        }
-    });
-
+        // Close robot message when clicking outside
+        document.addEventListener('click', (e) => {
+            if (!robotAssistant.contains(e.target) && !robotMessage.contains(e.target)) {
+                robotMessage.classList.remove('show');
+            }
+        });
     // ============================================
     // ROBOT ASSISTANT
     // ============================================
