Enhance About Us section with mission and team info
Updated the About Us section with mission and story details.

--- a/pages/about.html
+++ b/pages/about.html
@@ -32,35 +32,35 @@
         </nav>
     </header>
 
-    <header>
-        <!--Navigation-->
-    <nav class="navbar">
-        <div class="logo">
-            <div class="logo-icon">🤖</div>
-            <span class="logo-text">💕TECH-SISTERS🤖</span>
-        </div>
-        <ul class="nav-links">
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="about.html">About Us</a></li>
-            <li><a href="services.html">Our Services</a></li>
-            <li><a href="enquiry.html">Enquiry</a></li>
-            <li><a href="contact.html">Contact Us</a></li>
-        </ul> 
-    </nav>
-    <!--Added a hamburger navigation  for small devices-->
-            <div class="hamburger">
-                <span></span>
-                <span></span>
-                <span></span>
-            </div> 
-    </header>
-    <!--About Us Section-->
-    <section id="about" class="section">
+       <section id="about" class="section">
         <div class="container">
-            <div class="floating-card">
-                <div id="about" class="section">
-                <div class="container">
-                <h1 style="text-align: center; color: #ff1493; margin-bottom: 40px;">About TECH-SISTERS</h1>
+            <h1 class="section-title">About TECH-SISTERS</h1>
+            
+            <div class="card">
+                <h2>Our Mission</h2>
+                <p>TECH-SISTERS was founded with a simple yet powerful vision: to create a world where women dominate the technology landscape through sisterhood, innovation, and unwavering support. We believe that when women unite in tech, incredible things happen. We make robotics more inclusive, accessible and appealing. We design robots that are not only technologically advanced but also aesthetically pleasing and design philosophy.</p>
+            </div>
+
+            <div class="card">
+                <h2>Our Story</h2>
+                <p>TECH-SISTERS was found and developed in 2025 by a brilliant Software Developer student named SEDUMA MOHAU, who believes that Technology should be as beautiful as it is functional. TECH-SISTERS emerged from the need to address the gender gap in technology. What started as a small meetup group has grown into a global movement, impacting thousands of women worldwide and creating lasting change in the tech industry.</p>
+            </div>
+
+            <h2 class="section-title" style="margin: 60px 0 40px;">Meet Our Team</h2>
+            <div class="team-grid" id="teamGrid">
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <div class="socials">
+            <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
+            <a href="https://linkedin.com" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+        </div>
+        <p>&copy;2025 TECH-SISTERS. All rights reserved</p>
+    </footer>
                 
                 <div style="background: rgba(255,255,255,0.3); padding: 40px; border-radius: 20px; backdrop-filter: blur(10px); margin-bottom: 40px;">
                     <h2 style="color: #ff1493; margin-bottom: 20px;">Our Mission</h2>
