--- a/pages/about.html
+++ b/pages/about.html
@@ -90,4 +90,85 @@
             }
             setInterval(createFloatingHeart, 2500);
 
+            const hamburger = document.getElementById('hamburger');
+            const navLinks = document.getElementById('navLinks');
+            
+            hamburger.addEventListener('click', () => {
+                hamburger.classList.toggle('active');
+                navLinks.classList.toggle('active');
+            });
+            
+            document.querySelectorAll('.nav-links a').forEach(link => {
+                link.addEventListener('click', () => {
+                    hamburger.classList.remove('active');
+                    navLinks.classList.remove('active');
+                });
+            });
+
+            const teamMembers = [
+                {
+                    avatar: '👩‍💼',
+                    name: 'Seduma Mohau',
+                    role: 'Founder & CEO',
+                    bio: 'Former Software Developer with 2 years 9 months experience in AI and machine learning (Microsoft Learn). Passionate about creating opportunities for women in tech.'
+                },
+                {
+                    avatar: '👩‍🔬',
+                    name: 'Kholofelo Seduma',
+                    role: 'CTO & Co-Founder',
+                    bio: 'Honours in Agricultural Management Science, with 2 years experience of Computer Science. Led tech teams at Amazon and Microsoft before joining our mission.'
+                },
+                {
+                    avatar: '👩‍🎨',
+                    name: 'Jessica Rodriguez',
+                    role: 'Head of Community',
+                    bio: 'UX designer turned community builder. Expert in creating inclusive spaces and fostering meaningful connections.'
+                }
+            ];
+
+            const teamGrid = document.getElementById('teamGrid');
+            teamMembers.forEach(member => {
+                const el = document.createElement('div');
+                el.className = 'team-member';
+                el.innerHTML = `
+                    <div class="team-avatar">${member.avatar}</div>
+                    <h3>${member.name}</h3>
+                    <p><strong>${member.role}</strong></p>
+                    <p>${member.bio}</p>
+                `;
+                teamGrid.appendChild(el);
+            });
+
+            const observer = new IntersectionObserver((entries) => {
+                entries.forEach(entry => {
+                    if (entry.isIntersecting) {
+                        entry.target.style.opacity = '1';
+                        entry.target.style.transform = 'translateY(0)';
+                    }
+                });
+            }, { threshold: 0.1 });
+
+            document.querySelectorAll('.card, .team-member').forEach(el => {
+                observer.observe(el);
+            });
+
+            document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+                anchor.addEventListener('click', function (e) {
+                    e.preventDefault();
+                    const target = document.querySelector(this.getAttribute('href'));
+                    if (target) {
+                        window.scrollTo({
+                            top: target.offsetTop - 80,
+                            behavior: 'smooth'
+                        });
+                    }
+                });
+            });
+        });
+    </script>
+</body>
+</html>
+
+
+
    
