--- a/pages/services.html
+++ b/pages/services.html
@@ -8,10 +8,47 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
 </head>
 <body>
-    <div class="floating-heart">💕</div>
-    <div class="floating-heart">💖</div>
-    <div class="floating-heart">⚙️</div>
-    <div class="floating-heart">🌸</div>
+    <div id="floating-hearts"></div>
+
+    <header>
+        <nav class="navbar">
+            <div class="logo">
+                <div class="logo-icon">🤖</div>
+                <span class="logo-text">💕TECH-SISTERS🤖</span>
+            </div>
+            <ul class="nav-links" id="navLinks">
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="services.html">Our Services</a></li>
+                <li><a href="enquiry.html">Enquiry</a></li>
+                <li><a href="gallery">Gallery</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
+            </ul>
+            <div class="hamburger" id="hamburger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+        </nav>
+    </header>
+
+    <section id="services" class="section">
+        <div class="container">
+            <h1>Our Services</h1>
+            <div class="services-grid">
+                <div class="service-card">
+                    <h3>🎓 Tech Bootcamps</h3>
+                    <div class="price">R150</div>
+                    <ul>
+                        <li>12-week intensive coding program</li>
+                        <li>Full-stack web development</li>
+                        <li>AI & Machine Learning basics</li>
+                        <li>Career placement support</li>
+                        <li>Lifetime community access</li>
+                    </ul>
+                    <button class="cta-button" onclick="showPage('enquiry')">Enroll Now</button>
+                </div>
+
     
     <header>
         <!--Navigation-->
