Add service cards for mentorship and startup programs
Added service cards for Mentorship Program and Startup Incubator with details and call-to-action buttons.

--- a/pages/services.html
+++ b/pages/services.html
@@ -49,14 +49,31 @@
                     <button class="cta-button" onclick="showPage('enquiry')">Enroll Now</button>
                 </div>
 
-    
-    <header>
-        <!--Navigation-->
-    <nav class="navbar">
-        <div class="logo">
-            <div class="logo-icon">🤖</div>
-            <span class="logo-text">💕TECH-SISTERS🤖</span>
-            
+    <div class="service-card">
+                    <h3>💼 Mentorship Program</h3>
+                    <div class="price">R150/month</div>
+                    <ul>
+                        <li>1-on-1 mentorship sessions</li>
+                        <li>Industry expert guidance</li>
+                        <li>Career pathway planning</li>
+                        <li>Resume & interview prep</li>
+                        <li>Networking opportunities</li>
+                    </ul>
+                    <button class="cta-button" onclick="showPage('enquiry')">Get Mentor</button>
+                </div>
+
+                <div class="service-card">
+                    <h3>🚀 Startup Incubator</h3>
+                    <div class="price">Equity-based</div>
+                    <ul>
+                        <li>6-month incubation program</li>
+                        <li>R500 seed funding</li>
+                        <li>Expert mentorship</li>
+                        <li>Legal & business support</li>
+                        <li>Demo day presentation</li>
+                    </ul>
+                    <button class="cta-button" onclick="showPage('enquiry')">Apply Now</button>
+                </div>
         </div>
         <ul class="nav-links">
             <li><a href="../index.html">Home</a></li>
