Add new service cards for Custom Development, Online Courses, and Corporate Training

--- a/pages/services.html
+++ b/pages/services.html
@@ -74,44 +74,48 @@
                     </ul>
                     <button class="cta-button" onclick="showPage('enquiry')">Apply Now</button>
                 </div>
+        <div class="service-card">
+                    <h3>📱 Custom Development</h3>
+                    <div class="price">From R1000</div>
+                    <ul>
+                        <li>Web & mobile app development</li>
+                        <li>AI-powered solutions</li>
+                        <li>Cloud infrastructure setup</li>
+                        <li>Ongoing maintenance</li>
+                        <li>Team augmentation</li>
+                    </ul>
+                    <button class="cta-button" onclick="showPage('enquiry')">Get Quote</button>
+                </div>
+
+                <div class="service-card">
+                    <h3>📚 Online Courses</h3>
+                    <div class="price">R99 - R150</div>
+                    <ul>
+                        <li>Self-paced learning</li>
+                        <li>Python, JavaScript, Data Science</li>
+                        <li>Cybersecurity fundamentals</li>
+                        <li>Project-based learning</li>
+                        <li>Certificate of completion</li>
+                    </ul>
+                    <button class="cta-button" onclick="showPage('enquiry')">Browse Courses</button>
+                </div>
+
+                <div class="service-card">
+                    <h3>🌟 Corporate Training</h3>
+                    <div class="price">Custom pricing</div>
+                    <ul>
+                        <li>On-site team training</li>
+                        <li>Diversity & inclusion workshops</li>
+                        <li>Leadership development</li>
+                        <li>Technical skills upgrade</li>
+                        <li>Ongoing support</li>
+                    </ul>
+                    <button class="cta-button" onclick="showPage('enquiry')">Book Training</button>
+                </div>
+            </div>
         </div>
-        <ul class="nav-links">
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="about.html">About Us</a></li>
-            <li><a href="services.html">Our Services</a></li>
-            <li><a href="enquiry.html">Enquiry</a></li>
-            <li><a href="contact.html">Contact Us</a></li>
-        </ul> 
-    </nav>
-    <!--Add a hamburger navigation  for small devices-->
-            <div class="hamburger">
-                <span></span>
-                <span></span>
-                <span></span>
-            </div> 
-    </header>
-    <!--Services Section-->
-    <section id="services" class="section">
-        <div class="container">
-            <div class="services-grid">
-                <div class="services-item">
-                <div id="services" class="section">
-                <div class="container">
-                <h1 style="text-align: center; color: #ff1493; margin-bottom: 40px;">Our Services</h1>
-                
-                <div class="services-grid">
-                    <div class="service-card">
-                        <h3>🎓 Tech Bootcamps</h3>
-                        <div class="price">R150</div>
-                        <ul style="line-height: 1.8;">
-                            <li>12-week intensive coding program</li>
-                            <li>Full-stack web development</li>
-                            <li>AI & Machine Learning basics</li>
-                            <li>Career placement support</li>
-                            <li>Lifetime community access</li>
-                        </ul>
-                        <button class="cta-button" onclick="showPage('enquiry')" style="width: 100%; margin-top: 20px;">Enroll Now</button>
-                    </div>
+    </section>
+
 
                     <div class="service-card">
                         <h3>💼 Mentorship Program</h3>
