--- a/pages/services.html
+++ b/pages/services.html
@@ -115,76 +115,37 @@
             </div>
         </div>
     </section>
-
-
-                    <div class="service-card">
-                        <h3>💼 Mentorship Program</h3>
-                        <div class="price">R150/month</div>
-                        <ul style="line-height: 1.8;">
-                            <li>1-on-1 mentorship sessions</li>
-                            <li>Industry expert guidance</li>
-                            <li>Career pathway planning</li>
-                            <li>Resume & interview prep</li>
-                            <li>Networking opportunities</li>
-                        </ul>
-                        <button class="cta-button" onclick="showPage('enquiry')" style="width: 100%; margin-top: 20px;">Get Mentor</button>
-                    </div>
-
-                    <div class="service-card">
-                        <h3>🚀 Startup Incubator</h3>
-                        <div class="price">Equity-based</div>
-                        <ul style="line-height: 1.8;">
-                            <li>6-month incubation program</li>
-                            <li>R500 seed funding</li>
-                            <li>Expert mentorship</li>
-                            <li>Legal & business support</li>
-                            <li>Demo day presentation</li>
-                        </ul>
-                        <button class="cta-button" onclick="showPage('enquiry')" style="width: 100%; margin-top: 20px;">Apply Now</button>
-                    </div>
-
-                    <div class="service-card">
-                        <h3>📱 Custom Development</h3>
-                        <div class="price">From R1000</div>
-                        <ul style="line-height: 1.8;">
-                            <li>Web & mobile app development</li>
-                            <li>AI-powered solutions</li>
-                            <li>Cloud infrastructure setup</li>
-                            <li>Ongoing maintenance</li>
-                            <li>Team augmentation</li>
-                        </ul>
-                        <button class="cta-button" onclick="showPage('enquiry')" style="width: 100%; margin-top: 20px;">Get Quote</button>
-                    </div>
-
-                    <div class="service-card">
-                        <h3>📚 Online Courses</h3>
-                        <div class="price">R99 - R150</div>
-                        <ul style="line-height: 1.8;">
-                            <li>Self-paced learning</li>
-                            <li>Python, JavaScript, Data Science</li>
-                            <li>Cybersecurity fundamentals</li>
-                            <li>Project-based learning</li>
-                            <li>Certificate of completion</li>
-                        </ul>
-                        <button class="cta-button" onclick="showPage('enquiry')" style="width: 100%; margin-top: 20px;">Browse Courses</button>
-                    </div>
-
-                    <div class="service-card">
-                        <h3>🌟 Corporate Training</h3>
-                        <div class="price">Custom pricing</div>
-                        <ul style="line-height: 1.8;">
-                            <li>On-site team training</li>
-                            <li>Diversity & inclusion workshops</li>
-                            <li>Leadership development</li>
-                            <li>Technical skills upgrade</li>
-                            <li>Ongoing support</li>
-                        </ul>
-                        <button class="cta-button" onclick="showPage('enquiry')" style="width: 100%; margin-top: 20px;">Book Training</button>
-                    </div>
-                </div>
-            </div>
+ <footer>
+        <div class="socials">
+            <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
+            <a href="https://linkedin.com" target="_blank"><i class="fab fa-linkedin-in"></i></a>
         </div>
+        <p>&copy;2025 TECH-SISTERS. All rights reserved</p>
+</footer>
 
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            // 1. Floating Hearts Animation
+            const hearts = ['💕', '💖', '🌸', '💜', '💗', '🤖'];
+            const container = document.getElementById('floating-hearts');
+
+            function createHeart() {
+                const heart = document.createElement('div');
+                heart.className = 'floating-heart';
+                heart.textContent = hearts[Math.floor(Math.random() * hearts.length)];
+                heart.style.left = `${Math.random() * 100}vw`;
+                heart.style.animationDuration = `${15 + Math.random() * 10}s`;
+                heart.style.animationDelay = `${Math.random() * 5}s`;
+                heart.style.fontSize = `${20 + Math.random() * 15}px`;
+                heart.style.color = Math.random() > 0.5 ? '#ff1493' : '#9c27b0';
+                container.appendChild(heart);
+
+                setTimeout(() => {
+                    if (heart.parentNode) heart.remove();
+                }, 20000);
+            }
 </body>
 <footer>
         <div class="socials">
