--- a/pages/enquiry.html
+++ b/pages/enquiry.html
@@ -36,6 +36,57 @@
         </nav>
     </header>
 
+        <!-- Enquiry Section -->
+    <section id="enquiry" class="section">
+        <div class="container">
+            <h1>Make an Enquiry</h1>
+            <div class="success-message" id="enquirySuccess">
+                Thank you for your enquiry! Our team will get back to you within 24 hours. 💖
+            </div>
+            <div class="form-container">
+                <form id="enquiryForm">
+                    <div class="form-group">
+                        <label for="name">Full Name *</label>
+                        <input type="text" id="name" name="name" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="enquiryEmail">Email Address *</label>
+                        <input type="email" id="enquiryEmail" name="email" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="enquiryPhone">Phone Number *</label>
+                        <input type="tel" id="enquiryPhone" name="phone" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="service">Service Interested In *</label>
+                        <select id="service" name="service" required>
+                            <option value="">Select a service...</option>
+                            <option value="mobiloitte">Mobiloitte</option>
+                            <option value="ai-development">AI Development</option>
+                            <option value="iot-development">IoT Development</option>
+                            <option value="ux-ui-design">UX/UI Design</option>
+                            <option value="custom-software">Custom Software Development</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="enquiryBudget">Budget Range *</label>
+                        <select id="enquiryBudget" name="budget" required>
+                            <option value="">Select budget range...</option>
+                            <option value="under-500">Under R500</option>
+                            <option value="500-700">R500 - R700</option>
+                            <option value="700-800">R700 - R800</option>
+                            <option value="800-1000">R800 - R1000</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="message">Tell us about your dream robot</label>
+                        <textarea id="message" name="message" rows="5" placeholder="Describe your vision of your perfect pink robot service"></textarea>
+                    </div>
+                    <button type="submit" class="btn">Send Enquiry 🚀</button>
+                </form>
+            </div>
+        </div>
+    </section>
     <header>
         <!--Navigation-->
     <nav class="navbar">
