Remove duplicate header and footer sections

--- a/pages/enquiry.html
+++ b/pages/enquiry.html
@@ -87,105 +87,12 @@
             </div>
         </div>
     </section>
-    <header>
-        <!--Navigation-->
-    <nav class="navbar">
-        <div class="logo">
-            <div class="logo-icon">🤖</div>
-            <span class="logo-text">💕TECH-SISTERS🤖</span>
-        </div>
-        <ul class="nav-links">
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="about.html">About Us</a></li>
-            <li><a href="services.html">Our Services</a></li>
-            <li><a href="enquiry.html">Enquiry</a></li>
-            <li><a href="contact.html">Contact Us</a></li>
-        </ul> 
-    </nav> 
-    </header>
-    <!--Enquiry Sections-->
-     <nav class="navbar">
-        <div class="logo">
-            <div class="logo-icon">🤖</div>
-            <span class="logo-text">💕TECH-SISTERS🤖</span>
-        </div>
-        <ul class="nav-links">
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="about.html">About Us</a></li>
-            <li><a href="services.html">Our Services</a></li>
-            <li><a href="enquiry.html">Enquiry</a></li>
-            <li><a href="contact.html">Contact Us</a></li>
-        </ul> 
-    </nav>
-    <!--Added a hamburger navigation  for small devices-->
-            <div class="hamburger">
-                <span></span>
-                <span></span>
-                <span></span>
-            </div> 
-    </header>
-    <!--Enquiry Section-->
-    <section id="enquiry" class="section">
-        <form id="myForm" onsubmit="return validateForm()">
-        <div class="container">
-            <h1 style="text-align: center; color: #ff1493; margin-bottom: 40px;">Make an Enquiry</h1>
-                <div class="form-container">
-                    <div class="success-message" id="enquirySuccess">
-                        Thank you for your enquiry! Our team will get back to you within 24 hours. 💖
-               </div>
-            <div class="form-container">
-                <form id="enquiryForm">
-                    <div class="form-group">
-                        <label for="name">Full Name *</label>
-                        <input type="text" id="name" name="name" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="enquiryEmail">Email Address *</label>
-                        <input type="email" id="enquiryEmail" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="enquiryPhone">Phone Number *</label>
-                        <input type="tel" id="enquiryPhone" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="service">Service Interested In *</label>
-                        <select id="service" name="service" required>
-                            <option value="">Select a service..</option>
-                            <option value="">Mobiloitte</option>
-                            <option value="smart-home">AI Development</option>
-                            <option value="">Iot Development</option>
-                            <option value="">UX/UI design</option>
-                            <option value="smart-home">Custom software development</option>
-                        </select>
-                    </div>
-                    <div class="form-group">
-                        <label for="enquiryBudget">Budget Range *</label>
-                        <select id="enquiryBudget">
-                            <option value="">Select budget range...</option>
-                            <option value="under-500">Under R500</option>
-                            <option value="500-2000">R500 - R700</option>
-                            <option value="2000-5000">R700 - R800</option>
-                            <option value="5000-10000">R800 - R1000</option>
-                        </select>
-                    </div>
-                    <div class="form-group">
-                        <label class="message">Tell us about your dream robot</label>
-                        <textarea id="message" name="message" rows="5" placeholder="Describe your vision of your perfect pink robot service"></textarea>
-                    </div>
-                    <button type="submit" class="btn">Send Enquiry🚀</button>
-                </form>
-            </div>
-        </div>       
-    </section>
-</body>
-<footer>
+        <footer>
         <div class="socials">
-                <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
-                <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
-                <a href="https://Twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
-                <a href="https://LinkedIn.com" target="_blank"><i class="fab fa-LinkedIn"></i></a>
+            <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
+            <a href="https://linkedin.com" target="_blank"><i class="fab fa-linkedin-in"></i></a>
         </div>
-    <p>&copy;2025 TECH-SISTERS.All rights reserved</p>
-</footer>
-            <script src="./validate.js"></script>
-</html>
+        <p>&copy;2025 TECH-SISTERS. All rights reserved</p>
+    </footer>
