--- a/pages/contact.html
+++ b/pages/contact.html
@@ -8,32 +8,29 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
 </head>
 <body>
-    <div class="floating-heart">💕</div>
-    <div class="floating-heart">💖</div>
-    <div class="floating-heart">⚙️</div>
-    <div class="floating-heart">🌸</div>
+    dy>
+    <div id="floating-hearts"></div>
 
     <header>
-        <!--Navigation-->
-    <nav class="navbar">
-        <div class="logo">
-            <div class="logo-icon">🤖</div>
-            <span class="logo-text">💕TECH-SISTERS🤖</span>
-        </div>
-        <ul class="nav-links">
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="about.html">About Us</a></li>
-            <li><a href="services.html">Our Services</a></li>
-            <li><a href="enquiry.html">Enquiry</a></li>
-            <li><a href="contact.html">Contact Us</a></li>
-        </ul> 
-    </nav>
-    <!--Added a hamburger navigations  for small devices-->
-            <div class="hamburger">
+        <nav class="navbar">
+            <div class="logo">
+                <div class="logo-icon">🤖</div>
+                <span class="logo-text">💕TECH-SISTERS🤖</span>
+            </div>
+            <ul class="nav-links" id="navLinks">
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="about.html">About </a></li>
+                <li><a href="services.html">Our Services</a></li>
+                <li><a href="enquiry.html">Enquiry</a></li>
+                <li><a href="gallery">Gallery</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
+            </ul>
+            <div class="hamburger" id="hamburger">
                 <span></span>
                 <span></span>
                 <span></span>
-            </div> 
+            </div>
+        </nav>
     </header>
     <main>
        <main>
