--- a/pages/contact.html
+++ b/pages/contact.html
@@ -34,56 +34,36 @@
     </header>
     <main>
        <main>
-        <!--Registration Form Section-->
-        <h2>Registration form📝:</h2>
-    <form action="" method="post">
-        <table>
-            <!--Textboxes-->
-            <tr>
-                <td width="100px">Name:</td>
-                <td><input type="text" name="name" placeholder="Enter your name" required></td>
-            </tr>
-            <tr>
-                <td width="100px">Surname:</td>
-                <td><input type="text" name="surname" placeholder="Enter your surname" required></td>
-            </tr>
-            <!--Dropdown list-->
-            <tr>
-                <td width="100px">City</td>
-                <td>
-                    <select name="city">
-                        <option>--Select</option>
-                        <option>Cape Town</option>
-                        <option>Durban</option>
-                        <option>Johannesburg</option>
-                        <option>Pretoria</option>
-                        <option>Polokwane</option>
-                        <option>PortElizabeth</option>
+        <!-- Registration Form -->
+        <div style="margin-top: 60px;">
+            <h2>Registration Form 📝</h2>
+            <div class="form-container">
+                <div class="success-message" id="registrationSuccess">
+                    Registration submitted! We'll contact you soon. 💖
+                </div>
+
+                <div class="form-group">
+                    <label for="regName">Your Name *</label>
+                    <input type="text" id="regName" required>
+                </div>
+
+                <div class="form-group">
+                    <label for="regEmail">Your Email *</label>
+                    <input type="email" id="regEmail" required>
+                </div>
+
+                <div class="form-group">
+                    <label for="city">City *</label>
+                    <select id="city" required>
+                        <option value="">--Select--</option>
+                        <option value="Cape Town">Cape Town</option>
+                        <option value="Durban">Durban</option>
+                        <option value="Johannesburg">Johannesburg</option>
+                        <option value="Pretoria">Pretoria</option>
+                        <option value="Polokwane">Polokwane</option>
+                        <option value="Port Elizabeth">Port Elizabeth</option>
                     </select>
-                </td>
-                <!--Radio Buttons-->
-                <tr>
-                    <td width="100px">Gender:</td>
-                    <td><input type="radio" checked="checked" name="female" value="female">Female</type></td>
-                </tr>
-                <!--Attachment-->
-                <tr>
-                    <td width="100">Attachment</td>
-                    <td><input type="file" name="Document"></td>
-                </tr>
-                <!--Text area-->
-                <tr>
-                    <td width="100">Commenets:</td>
-                    <td>
-                        <textarea rows="10" cols="15"></textarea>
-                    </td>
-                </tr>
-                <tr>
-                    <td width="150"></td>
-                    <td><input type="submit" name="button" value="Submit"></td>
-                </tr>
-            </tr>
-        </table>
+                </div>
 
 
         <!--Contact Section-->
