--- a/pages/contact.html
+++ b/pages/contact.html
@@ -210,7 +210,23 @@
             }
 
             for (let i = 0; i < 6; i++) setTimeout(createHeart, i * 800);
-            setInterval(createHeart, 2500);   
+            setInterval(createHeart, 2500);  
+
+            // Mobile Menu
+            const hamburger = document.getElementById('hamburger');
+            const navLinks = document.getElementById('navLinks');
+
+            hamburger.addEventListener('click', () => {
+                hamburger.classList.toggle('active');
+                navLinks.classList.toggle('active');
+            });
+
+            document.querySelectorAll('.nav-links a').forEach(link => {
+                link.addEventListener('click', () => {
+                    hamburger.classList.remove('active');
+                    navLinks.classList.remove('active');
+                });
+            });
 
                         
                         
