--- a/pages/about.html
+++ b/pages/about.html
@@ -59,6 +59,8 @@
             <a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
             <a href="https://linkedin.com" target="_blank"><i class="fab fa-linkedin-in"></i></a>
         </div>
+         <div id="datestamp"></div>
+         <div class="timestamp" id="time"></div>
         <p>&copy;2025 TECH-SISTERS. All rights reserved</p>
     </footer>
     <script>
