--- a/pages/about.html
+++ b/pages/about.html
@@ -164,6 +164,38 @@
                             behavior: 'smooth'
                         });
                     }
+                     //DATE STAMP
+                function displayDate() {
+                const today = new Date();
+
+                const dateStr = today.toDateString(); // 
+
+                document.getElementById("datestamp").innerHTML = `Today's Date: ${dateStr}`;
+            }
+
+                displayDate();
+
+                //Inserting TimeStamp (Dynamic content)
+            function displayTime() {
+                const now = new Date();
+                let hours = now.getHours();
+                let minutes = now.getMinutes();
+                let seconds = now.getSeconds();
+
+                // Add leading zeroes for single-digit minutes and seconds
+                hours = hours < 10 ? "0" + hours : hours;
+                minutes = minutes < 10 ? "0" + minutes : minutes;
+                seconds = seconds < 10 ? "0" + seconds : seconds;
+
+                const currentTime = hours + ":" + minutes + ":" + seconds;
+                document.getElementById("time").textContent = currentTime;
+            }
+
+            // Call the displayTime function every second to update the time
+            setInterval(displayTime, 1000);
+
+            // Display the time immediately when the page loads
+            displayTime();
                 });
             });
         });
