--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
             </div>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="pages/about.html">About </a></li>
-                <li><a href="pages/services.html">Services</a></li>
-                <li><a href="pages/enquiry.html">Enquiry</a></li>
-                <li><a href="pages/gallery">Gallery</a></li>
-                <li><a href="pages/about.html">Contact</a></li>
+                <li><a href="../pages/about.html">About </a></li>
+                <li><a href="../pages/services.html">Services</a></li>
+                <li><a href="../pages/enquiry.html">Enquiry</a></li>
+                <li><a href="../pages/gallery">Gallery</a></li>
+                <li><a href="../pages/about.html">Contact</a></li>
             </ul>
             <div class="search-container">
                 <input type="text" class="search-input" placeholder="Search..." id="searchInput">
