--- a/pages/about.html
+++ b/pages/about.html
@@ -21,7 +21,7 @@
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="services.html">Our Services</a></li>
                 <li><a href="enquiry.html">Enquiry</a></li>
-                <li><a href="gallery.html">Gallery</a></li>
+                <li><a href="Gallery.html">Gallery</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
             </ul>
             <div class="hamburger" id="hamburger">
