--- a/pages/services.html
+++ b/pages/services.html
@@ -18,11 +18,11 @@
             </div>
             <ul class="nav-links" id="navLinks">
                 <li><a href="../index.html">Home</a></li>
-                <li><a href="../pages/about.html">About Us</a></li>
-                <li><a href="../pages/services.html">Our Services</a></li>
-                <li><a href="../pages/enquiry.html">Enquiry</a></li>
-                <li><a href="../pages/gallery">Gallery</a></li>
-                <li><a href="../pages/contact.html">Contact Us</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="services.html">Our Services</a></li>
+                <li><a href="enquiry.html">Enquiry</a></li>
+                <li><a href="Gallery.html">Gallery</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
             </ul>
             <div class="hamburger" id="hamburger">
                 <span></span>
