--- a/pages/Galley.html
+++ b/pages/Galley.html
@@ -18,7 +18,7 @@
                 <span class="logo-text">💕TECH-SISTERS🤖</span>
             </div>
             <ul class="nav-links" id="navLinks">
-                <li><a href="../index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="../pages/about.html">About</a></li>
                 <li><a href="../pages/services.html">Services</a></li>
                 <li><a href="../pages/enquiry.html">Enquiry</a></li>
