--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
             </div>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="../pages/about.html">About </a></li>
-                <li><a href="../pages/services.html">Services</a></li>
-                <li><a href="../pages/enquiry.html">Enquiry</a></li>
-                <li><a href="../pages/gallery">Gallery</a></li>
-                <li><a href="../pages/about.html">Contact</a></li>
+                <li><a href="about.html">About </a></li>
+                <li><a href="services.html">Services</a></li>
+                <li><a href="enquiry.html">Enquiry</a></li>
+                <li><a href="Gallery.html">Gallery</a></li>
+                <li><a href="about.html">Contact</a></li>
             </ul>
             <div class="search-container">
                 <input type="text" class="search-input" placeholder="Search..." id="searchInput">
@@ -76,9 +76,10 @@
                 <h1>🌸TECH-SISTERS💕</h1>
                 <p>Empowering Women in Technology Through Innovation And Sisterhood</p>
                 <p>Where Robotics Meets Female Excellence - Join the revolution of women shaping the future through technology!💕</p>
-                <a href="pages/about.html" class="cta-button">Discover Our Mission</a>
-                <a href="pages/services.html" class="cta-button">Explore Our Services</a>
-                <a href="pages/contact.html" class="cta-button">Contact</a>
+                <a href="../pages/about.html" class="cta-button">Discover Our Mission</a>
+                <a href="../pages/services.html" class="cta-button">Explore Our Services</a>
+                <a href="../pages/contact.html" class="cta-button">Contact</a>
+                <a href="../pages/Gallery.html" class="cta-button">Gallery</a>
             </div>
         </div>
 
@@ -210,28 +211,28 @@
         <div class="interactive-section" id="gallery">
             <h2 class="section-title">Our Community in Action</h2>
             <div class="gallery">
-                <div class="gallery-item" data-src="assets/gallery-2.jpg">
-                    <img src="assets/gallery-2.jpg" alt="Robotics Workshop">
+                <div class="gallery-item" data-src="../assets/gallery-2.jpg">
+                    <img src="../assets/gallery-2.jpg" alt="Robotics Workshop">
                     <div class="gallery-overlay">Robotics Workshop</div>
                 </div>
-                <div class="gallery-item" data-src="assets/gallery-1.jpg">
-                    <img src="assets/gallery-1.jpg" alt="Hackathon Event">
+                <div class="gallery-item" data-src="../assets/gallery-1.jpg">
+                    <img src="../assets/gallery-1.jpg" alt="Hackathon Event">
                     <div class="gallery-overlay">Hackathon Event</div>
                 </div>
-                <div class="gallery-item" data-src="assets/mentorship.jpg">
-                    <img src="assets/mentorship.jpg" alt="Mentorship Session">
+                <div class="gallery-item" data-src="../assets/mentorship.jpg">
+                    <img src="../assets/mentorship.jpg" alt="Mentorship Session">
                     <div class="gallery-overlay">Mentorship Session</div>
                 </div>
-                <div class="gallery-item" data-src="assets/DOCTORS Graduates.jpg">
-                    <img src="assets/DOCTORS Gradautes.jpg" alt="Graduation Ceremony">
+                <div class="gallery-item" data-src="../assets/DOCTORS Graduates.jpg">
+                    <img src="../assets/DOCTORS Gradautes.jpg" alt="Graduation Ceremony">
                     <div class="gallery-overlay">Graduation Ceremony</div>
                 </div>
-                <div class="gallery-item" data-src="assets/gallery-3.jpg">
-                    <img src="assets/gallery-3.jpg" alt="Tech Conference">
+                <div class="gallery-item" data-src="../assets/gallery-3.jpg">
+                    <img src="../assets/gallery-3.jpg" alt="Tech Conference">
                     <div class="gallery-overlay">Tech Conference</div>
                 </div>
-                <div class="gallery-item" data-src="assets/Community meetup">
-                    <img src="assets/Community meetup.webp" alt="Community Meetup">
+                <div class="gallery-item" data-src="../assets/Community meetup">
+                    <img src="../assets/Community meetup.webp" alt="Community Meetup">
                     <div class="gallery-overlay">Community Meetup</div>
                 </div>
             </div>
