--- a/pages/Gallery.html
+++ b/pages/Gallery.html
@@ -19,11 +19,11 @@
             </div>
             <ul class="nav-links" id="navLinks">
                 <li><a href="../index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="services.html">Services</a></li>
-                <li><a href="enquiry.html">Enquiry</a></li>
+                <li><a href="../about.html">About</a></li>
+                <li><a href="../services.html">Services</a></li>
+                <li><a href="../enquiry.html">Enquiry</a></li>
                 <li><a href="Gallery.html">Gallery</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="../contact.html">Contact</a></li>
             </ul>
             <div class="hamburger" id="hamburger">
                 <span></span>
