--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
                 <h1>🌸TECH-SISTERS💕</h1>
                 <p>Empowering Women in Technology Through Innovation And Sisterhood</p>
                 <p>Where Robotics Meets Female Excellence - Join the revolution of women shaping the future through technology!💕</p>
-                <a href="../pages/about.html" class="cta-button">Discover Our Mission</a>
-                <a href="../pages/services.html" class="cta-button">Explore Our Services</a>
-                <a href="../pages/contact.html" class="cta-button">Contact</a>
-                <a href="../pages/Gallery.html" class="cta-button">Gallery</a>
+                <a href="about.html" class="cta-button">Discover Our Mission</a>
+                <a href="services.html" class="cta-button">Explore Our Services</a>
+                <a href="contact.html" class="cta-button">Contact</a>
+                <a href="Gallery.html" class="cta-button">Gallery</a>
             </div>
         </div>
 
