--- a/pages/Gallery.html
+++ b/pages/Gallery.html
@@ -38,28 +38,28 @@
         <div class="interactive-section" id="gallery">
             <h2 class="section-title">Our Community in Action</h2>
             <div class="gallery">
-                <div class="gallery-item" data-src="assets/gallery-2.jpg">
-                    <img src="assets/gallery-2.jpg" alt="Robotics Workshop">
+                <div class="gallery-item" data-src="../assets/gallery-2.jpg">
+                    <img src="../assets/gallery-2.jpg" alt="Robotics Workshop">
                     <div class="gallery-overlay">Robotics Workshop</div>
                 </div>
-                <div class="gallery-item" data-src="assets/gallery-1.jpg">
-                    <img src="assets/gallery-1.jpg" alt="Hackathon Event">
+                <div class="gallery-item" data-src="../assets/gallery-1.jpg">
+                    <img src="../assets/gallery-1.jpg" alt="Hackathon Event">
                     <div class="gallery-overlay">Hackathon Event</div>
                 </div>
-                <div class="gallery-item" data-src="assets/mentorship.jpg">
-                    <img src="assets/mentorship.jpg" alt="Mentorship Session">
+                <div class="gallery-item" data-src="../assets/mentorship.jpg">
+                    <img src="../assets/mentorship.jpg" alt="Mentorship Session">
                     <div class="gallery-overlay">Mentorship Session</div>
                 </div>
-                <div class="gallery-item" data-src="assets/DOCTORS Gradautes.jpg">
-                    <img src="assets/DOCTORS Gradautes.jpg" alt="Graduation Ceremony">
+                <div class="gallery-item" data-src="../assets/DOCTORS Gradautes.jpg">
+                    <img src="../assets/DOCTORS Gradautes.jpg" alt="Graduation Ceremony">
                     <div class="gallery-overlay">Graduation Ceremony</div>
                 </div>
-                <div class="gallery-item" data-src="assets/gallery-3.jpg">
-                    <img src="assets/gallery-3.jpg" alt="Tech Conference">
+                <div class="gallery-item" data-src="../assets/gallery-3.jpg">
+                    <img src="../assets/gallery-3.jpg" alt="Tech Conference">
                     <div class="gallery-overlay">Tech Conference</div>
                 </div>
-                <div class="gallery-item" data-src="assets/Community meetup.webp">
-                    <img src="assets/Community meetup.webp" alt="Community Meetup">
+                <div class="gallery-item" data-src="../assets/Community meetup.webp">
+                    <img src="../assets/Community meetup.webp" alt="Community Meetup">
                     <div class="gallery-overlay">Community Meetup</div>
                 </div>
             </div>
